# LuaCppDemo

./: CMakeLists.txt  README.md  main.cpp
Demos/: main.cpp
Demos/cpp/: get_increment.h  get_then_push.h  hello_world.h  null_terminator.h
Demos/lua/: get.lua  get_increment.lua  null_terminator.lua  push.lua  utils.lua
LuaCppAPI/: LuaCppAPI.cpp  LuaCppAPI.h  LuaCppAPI.lua  Serializer.lua
Serialization/: ExampleSerializer.lua
lua/: a.lua  b.lua  c.lua  increment.lua  null_terminator.lua  utils.lua
